--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,6 +4,17 @@ before:
 env:
   - CGO_ENABLED=0
 builds:
+  - id: windows-amd64
+    main: ./cmd/rhmctl 
+    goos:
+      - windows
+    goarch:
+      - amd64
+    ldflags:
+      - -s -w
+      - -X "github.com/operator-framework/operator-manifest-tools/cmd.Version={{.Tag}}"
+      - -X "github.com/operator-framework/operator-manifest-tools/cmd.Commit={{.Commit}}"
+      - -X "github.com/operator-framework/operator-manifest-tools/cmd.Date={{.Date}}"
   - id: linux-amd64
     main: ./cmd/rhmctl 
     goos:
@@ -62,6 +73,7 @@ builds:
 archives:
   - id: openshift-build
     builds:
+      - windows-amd64
       - darwin-amd64
       - linux-amd64
       - linux-arm64
@@ -71,6 +83,7 @@ archives:
     format: binary
   - id: default
     builds:
+      - windows-amd64
       - darwin-amd64
       - linux-amd64
       - linux-arm64
