--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,3 +27,19 @@ jobs:
 
       - name: Test
         run: ginkgo -r --randomizeAllSpecs --randomizeSuites --failOnPending --cover --trace --race --progress
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        if: github.ref != 'refs/heads/main'
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --snapshot --rm-dist
+
+      - name: Archive build
+        if: github.ref != 'refs/heads/main'
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist-without-markdown
+          path: |
+            dist
