--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,9 +4,9 @@ before:
 env:
   - CGO_ENABLED=0
 builds:
-  - id: rhmctl
-    main: ./cmd/rhmctl
-    binary: rhmctl
+  - id: datactl
+    main: ./cmd/datactl
+    binary: datactl
     targets:
       - linux_amd64
       - linux_s390x
@@ -15,9 +15,9 @@ builds:
       - darwin_amd64
       - darwin_arm64
       - windows_amd64
-  - id: oc-rhmctl
-    main: ./cmd/rhmctl
-    binary: oc-rhmctl
+  - id: oc-datactl
+    main: ./cmd/datactl
+    binary: oc-datactl
     targets:
       - linux_amd64
       - linux_s390x
@@ -35,8 +35,8 @@ archives:
       linux: Linux
       windows: Windows
     builds:
-      - rhmctl
-      - oc-rhmctl
+      - datactl
+      - oc-datactl
     format: tar
 checksum:
   name_template: 'checksums.txt'
