--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,29 +12,36 @@ builds:
       - -tags=prod
     hooks:
       pre: sh -c "echo 'version={{ .Version }} sha={{ .ShortCommit }} date={{ .Date }}' > ./cmd/datactl/app/version.txt"
-    targets:
-      - linux_amd64
-      - linux_s390x
-      - linux_arm64
-      - linux_ppc64le
-      - darwin_amd64
-      - darwin_arm64
-      - windows_amd64
-  - id: oc-datactl
+    goos:
+      - darwin
+      - windows
+    goarch:
+      - amd64
+  - id: datactl-arm64
     main: ./cmd/datactl
-    binary: oc-datactl
+    binary: datactl
     flags:
       - -tags=prod
     hooks:
       pre: sh -c "echo 'version={{ .Version }} sha={{ .ShortCommit }} date={{ .Date }}' > ./cmd/datactl/app/version.txt"
-    targets:
-      - linux_amd64
-      - linux_s390x
-      - linux_arm64
-      - linux_ppc64le
-      - darwin_amd64
-      - darwin_arm64
-      - windows_amd64
+    goos:
+      - darwin
+      - linux
+    goarch:
+      - arm64
+  - id: datactl-otherarch
+    main: ./cmd/datactl
+    binary: datactl
+    flags:
+      - -tags=prod
+    hooks:
+      pre: sh -c "echo 'version={{ .Version }} sha={{ .ShortCommit }} date={{ .Date }}' > ./cmd/datactl/app/version.txt"
+    goos:
+      - linux
+    goarch:
+      - amd64
+      - s390x
+      - ppc64le
 archives:
   - id: tar
     name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}'
@@ -44,8 +51,9 @@ archives:
       linux: Linux
       windows: Windows
     builds:
-      - datactl
-      - oc-datactl
+      - datactl-amd64
+      - datactl-arm64
+      - datactl-otherarch
     format: tar.gz
     files:
       - LICENSE
@@ -53,6 +61,7 @@ archives:
         dst: docs
         strip_parent: true
       - src: './hack/service-account-role.yaml'
+        dst: resources
         strip_parent: true
 checksum:
   name_template: 'checksums.txt'
