--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,7 +7,7 @@ env:
 builds:
   - id: datactl
     main: ./cmd/datactl
-    binary: datactl
+    binary: oc-datactl
     flags:
       - -tags=prod
     hooks:
@@ -19,7 +19,7 @@ builds:
       - amd64
   - id: datactl-arm64
     main: ./cmd/datactl
-    binary: datactl
+    binary: oc-datactl
     flags:
       - -tags=prod
     hooks:
@@ -31,7 +31,7 @@ builds:
       - arm64
   - id: datactl-otherarch
     main: ./cmd/datactl
-    binary: datactl
+    binary: oc-datactl
     flags:
       - -tags=prod
     hooks:
