--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,22 +23,22 @@ jobs:
         run: go build -v ./...
 
       - name: WhiteSource Unified Agent Scan
-      env:
-        WS_APIKEY: ${{secrets.APIKEY}}
-        WS_USERKEY: ${{secrets.USERKEY}}
-        WS_WSS_URL: https://saas.whitesourcesoftware.com/agent
-        WS_PRODUCTNAME: GH_${{github.event.repository.name}}
-        WS_PROJECTNAME: ${{github.ref}}_ghaction
-      run: |
-        echo Downloading WhiteSource Unified Agent
-        curl -LJO https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar
-        if [[ "$(curl -sL https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar.sha256)" != "$(sha256sum wss-unified-agent.jar)" ]] ; then
-          echo "Integrity Check Failed"
-        else
-          echo "Integrity Check Passed"
-          echo Starting WhiteSource Scan
-          java -jar wss-unified-agent.jar
-        fi
+        env:
+          WS_APIKEY: ${{secrets.WS_APIKEY}}
+          WS_USERKEY: ${{secrets.WS_USERKEY}}
+          WS_WSS_URL: https://saas.whitesourcesoftware.com/agent
+          WS_PRODUCTNAME: GH_${{github.event.repository.name}}
+          WS_PROJECTNAME: ${{github.ref}}_ghaction
+        run: |
+          echo Downloading WhiteSource Unified Agent
+          curl -LJO https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar
+          if [[ "$(curl -sL https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar.sha256)" != "$(sha256sum wss-unified-agent.jar)" ]] ; then
+            echo "Integrity Check Failed"
+          else
+            echo "Integrity Check Passed"
+            echo Starting WhiteSource Scan
+            java -jar wss-unified-agent.jar
+          fi
 
       - name: Ginkgo
         run: |
