--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,9 +26,9 @@ jobs:
         env:
           WS_APIKEY: ${{secrets.WS_APIKEY}}
           WS_USERKEY: ${{secrets.WS_USERKEY}}
-          WS_WSS_URL: https://saas.whitesourcesoftware.com/agent
-          WS_PRODUCTNAME: GH_${{github.event.repository.name}}
-          WS_PROJECTNAME: ${{github.ref}}_ghaction
+          WS_WSS_URL: https://ibmets.whitesourcesoftware.com/agent
+          WS_PRODUCTNAME: ${{secrets.WS_PRODUCTNAME}}
+          WS_PROJECTNAME: ${{github.event.repository.name}}
         run: |
           echo Downloading WhiteSource Unified Agent
           curl -LJO https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar
