go install ginkgo

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,8 +42,8 @@ jobs:
 
       - name: Ginkgo
         run: |
-          go get github.com/onsi/ginkgo/ginkgo
-          go get github.com/onsi/gomega/...
+          go install github.com/onsi/ginkgo/ginkgo
+          go install github.com/onsi/gomega/...
 
       - name: Test
         run: ginkgo -r --randomizeAllSpecs --randomizeSuites --failOnPending --cover --trace --race --progress
