--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
           go-version: 1.19.5
       - name: Ginkgo
         run: |
-          go install github.com/onsi/ginkgo/ginkgo
+          go install github.com/onsi/ginkgo/v2/ginkgo
           go install github.com/onsi/gomega/...
 
       - name: Test
