--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,3 +39,35 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{github.repository}}
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+      - name: Get TAG
+        id: get_tag
+        run: echo TAG=${GITHUB_REF#refs/tags/} >> $GITHUB_ENV
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to container registry
+        uses: docker/login-action@v2
+        with:
+          registry: quay.io/rh-marketplace
+          username: ${{secrets['quayUser']}}
+          password: ${{secrets['quayPassword']}}
+      - name: Release build
+        id: release_build
+        uses: docker/build-push-action@v3
+        with:
+          outputs: "type=registry,push=true"
+          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
+          build-args: |
+            Version=${{ env.TAG }}
+            GitCommit=${{ github.sha }}
+          tags: |
+            quay.io/rh-marketplace/datactl:${{ github.sha }}
+            quay.io/rh-marketplace/datactl:${{ env.TAG }}
+            quay.io/rh-marketplace/datactl:latest
