replace deprecated --rm-dist with --clean

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -54,7 +54,7 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --snapshot --rm-dist
+          args: release --snapshot --clean
 
       - name: Archive build
         if: github.ref != 'refs/heads/main'
