--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           go-version: 1.19.10
 
+      - name: Check Licenses
+        run: make licenses-check
+
       - name: Build
         run: go build -v ./...
 
